--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,5 @@
 
     <string name="receipt_report_subject">MyReceipts Crime Report</string>
     <string name="send_report">Send receipt report via</string>
+    <string name="receipt_report">%1$s\n%2$s\n%3$s\n%4$s</string>
 </resources>
