empty help fragment with webview

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,7 @@
     <string name="receipt_photo_description">Receipt Photo</string>
 
     <string name="new_receipt">New Receipt</string>
+    <string name="help">Help</string>
 
     <string name="receipt_report_subject">MyReceipts Crime Report</string>
     <string name="send_report">Send receipt report via</string>
