--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,7 @@
 
     <string name="date_picker_title">Date of receipt:</string>
     <string name="receipt_photo_description">Receipt Photo</string>
+    <string name="location_text">lat: %1$f\nlong: %2$f</string>
     <string name="show_map_text">Show Map</string>
 
     <string name="new_receipt">New Receipt</string>
