--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">MyReceipts</string>
-    
+
     <string name="receipt_title_hint">Enter a title for the receipt.</string>
     <string name="receipt_title_label">Title</string>
 
@@ -24,4 +24,8 @@
     <string name="receipt_report_subject">MyReceipts Crime Report</string>
     <string name="send_report">Send receipt report via</string>
     <string name="receipt_report">%1$s\n%2$s\n%3$s\n%4$s</string>
+
+    <string name="google_maps_key">AIzaSyCpOCxsPbl-tXlRIV4nzhnRibIYymdznfY</string>
+    <string name="title_activity_maps">Receipt Location</string>
+
 </resources>
