location of receipt is shown and zoomed into in map activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,5 +27,6 @@
 
     <string name="google_maps_key">AIzaSyCpOCxsPbl-tXlRIV4nzhnRibIYymdznfY</string>
     <string name="title_activity_maps">Receipt Location</string>
+    <string name="marker_title">Receipt Location</string>
 
 </resources>
